src/test/ui/issues/issue-50403.stderr
error: concat_idents! takes 1 or more arguments.
  --> $DIR/issue-50403.rs:14:13
   |
LL |     let x = concat_idents!(); //~ ERROR concat_idents! takes 1 or more arguments
   |             ^^^^^^^^^^^^^^^^

error: aborting due to previous error

